needed canvas to draw lines. see *2.xxx files. todo: clearRect and fix plane mousedown exclusivity

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
   </head>
   <body>
-    
-    <div id="contentContainer" >
-      <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png">
+    <div id="content-main">
+      <div id="spawn-area">
+        <div id="contentContainer" >
+          <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png">
+        </div>
+      </div>
     </div>
 
     <script src='./game.js'></script>
