drawing and clearing worked out

--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
 
     <title>Air Traffic Controller</title>
-    <!-- <link rel="stylesheet" type="text/css" href="./atf2.css"> -->
+    <link rel="stylesheet" type="text/css" href="./atf2.css">
 
   </head>
   <body>
     <!-- <div id="content-main">
       <div id="spawn-area"> -->
         <canvas id="contentContainer" width="550" height="350"
-          style="border:1px solid #000000; background-color:grey">
+          style="border:5px solid blue; background-color:grey">
           <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png">
         </canvas>
 
