made planeObj. got mousedown on plane only agn

--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
       <div id="spawn-area"> -->
         <canvas id="contentContainer" width="550" height="350"
           style="border:5px solid blue; background-color:grey">
-          <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png">
+          <!-- <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png"> -->
         </canvas>
 
       <!-- </div>
