--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,8 @@
       <!-- </div>
     </div> -->
 
-    <script src='./game2.js'></script>
+    <!-- <script src='./game2.js'></script> -->
+    <script src='./game3.js'></script>
 
   </body>
 </html>
