changed file structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 
     <title>Traffic Controller</title>
-    <link rel="stylesheet" type="text/css" href="../atf2.css">
+    <link rel="stylesheet" type="text/css" href="./atf2.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
   </head>
@@ -30,7 +30,7 @@
     </div>
 
     <!-- <script src='../src/game2.js'></script> -->
-    <script src='../src/game3.js'></script>
+    <script src='./src/game3.js'></script>
     <!-- <script src='../bundle.js'></script> -->
 
   </body>
