spacebar alt to mousedown

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Traffic Controller</title>
+    <title>Pathfinder</title>
     <link rel="stylesheet" type="text/css" href="./atf2.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
@@ -12,7 +12,7 @@
     <div id="content-main">
       <div id="spawn-area">
 
-        <h2>Traffic Controller</h2>
+        <h2>Pathfinder</h2>
         <p>by Jeremy John</p>
 
         <canvas id="contentContainer"
