added link to portfolio site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <div id="spawn-area">
 
         <h2>Pathfinder</h2>
+        <a class='link-to-portfolio' href="https://jeremyjohn.me">
         <p>by Jeremy John</p>
+        </a>
+
 
         <canvas id="contentContainer"
           width="640" height="480">
