--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 
     <title>Pathfinder</title>
     <link rel="stylesheet" type="text/css" href="./atf2.css">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Ubuntu" rel="stylesheet">
 
   </head>
   <body>
     <div id="content-main">
       <div id="spawn-area">
 
-        <h2>Pathfinder</h2>
-        <a class='link-to-portfolio' href="https://jeremyjohn.me">
+        <h2>P A T H F I N D E R</h2>
+        <a class='link-to-portfolio' href="http://jeremyjohn.me">
         <p>by Jeremy John</p>
         </a>
 
@@ -25,9 +26,20 @@
         </canvas>
 
         <div id="links">
-          <a href="https://github.com/thejeremyjohn">Github</a>
-          <a href="https://www.linkedin.com/in/jeremy-john-60a511131/">LinkedIn</a>
+          <!-- <a href="https://github.com/thejeremyjohn">Github</a>
+          <a href="https://www.linkedin.com/in/jeremy-john-60a511131/">LinkedIn</a> -->
+          <a target="_blank" href="https://github.com/thejeremyjohn">
+            <img class="icon"
+            src="emojis/githubblue.png"
+            alt="">
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/jeremy-john-60a511131/">
+            <img class="icon"
+            src="emojis/square-linkedin-512.png"
+            alt="">
+          </a>
         </div>
+
 
       </div>
     </div>
