--- a/old/index.html
+++ b/old/index.html
@@ -1,22 +1,49 @@
+<!-- attempted to get this working in the root folder after successfull webpack -->
+<!-- styles are applied but the game does not run apparently -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
 
-    <title>Air Traffic Controller</title>
-    <link rel="stylesheet" type="text/css" href="./atf.css">
+    <title>Pathfinder</title>
+    <link rel="stylesheet" type="text/css" href="atf2.css">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Ubuntu" rel="stylesheet">
 
   </head>
   <body>
     <div id="content-main">
       <div id="spawn-area">
-        <div id="contentContainer" >
-          <img id="plane" src="Without Source files -Game Assets/JU-87B2/Type_3/JU87B2 -progress_5.png">
+
+        <h2>P A T H F I N D E R</h2>
+        <a class='link-to-portfolio' href="http://jeremyjohn.me">
+        <p>by Jeremy John</p>
+        </a>
+
+
+        <canvas id="contentContainer"
+          width="640" height="480">
+        </canvas>
+
+        <div id="links">
+          <a target="_blank" href="https://github.com/thejeremyjohn">
+            <img class="icon"
+            src="./emojis/githubblue.png"
+            alt="">
+          </a>
+          <a target="_blank" href="https://www.linkedin.com/in/jeremy-john-60a511131/">
+            <img class="icon"
+            src="./emojis/square-linkedin-512.png"
+            alt="">
+          </a>
         </div>
+
+
       </div>
     </div>
 
-    <script src='./game.js'></script>
+    <!-- <script src='../src/index.js'></script> -->
+    <script src="./dist/main.js"></script>
 
   </body>
 </html>
