changed link style, commented console logs

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Ubuntu" rel="stylesheet">
 
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-database.js"></script>
+
   </head>
   <body>
     <div id="content-main">
       <div id="spawn-area">
 
         <h2>P A T H F I N D E R</h2>
-        <a class='link-to-portfolio' href="http://jeremyjohn.me">
-        <p>by Jeremy John</p>
-        </a>
-
+        <a class='link-to-portfolio' href="http://jeremyjohn.me">by Jeremy John</a>
 
         <canvas id="contentContainer"
           width="640" height="480">
