firebase highscore in progress

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
     <link rel="stylesheet" type="text/css" href="./atf2.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Ubuntu" rel="stylesheet">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase-database.js"></script>
+
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyCB12xLe4RMZH-duZNASYqWU5KXVvMfo4g",
+        authDomain: "pathfinder-f3799.firebaseapp.com",
+        databaseURL: "https://pathfinder-f3799.firebaseio.com",
+        projectId: "pathfinder-f3799",
+        storageBucket: "pathfinder-f3799.appspot.com",
+        messagingSenderId: "63444165594"
+      };
+      firebase.initializeApp(config);
+    </script>
 
   </head>
   <body>
